# rl-squared

./: .gitignore  README.md  main.py  pyproject.toml  rl2_talk.ipynb  streamlit_app.py  train.py
artifacts/: checkpoint-20251217-232954.pt  checkpoint-20251217-233629.pt  checkpoint-20251217-234330.pt  checkpoint-20251218-093414.pt  checkpoint-20251218-100200.pt  checkpoint-20251218-100552.pt  checkpoint-20251218-101215.pt  checkpoint-20251218-101751.pt  checkpoint-20251218-103521.pt  checkpoint-20251218-105132.pt  checkpoint-20251218-113117.pt  checkpoint-20251218-114715.pt  checkpoint-20251218-120412.pt  checkpoint-20251218-121015.pt  checkpoint-20251218-121934.pt  checkpoint-20251218-122840.pt  checkpoint-20251218-124302.pt  checkpoint-20251218-124807.pt  config.json  latest.pt  pca.npz  training_metrics.json
rl_squared/: __init__.py  bandit.py  model.py  pca_utils.py  rollout.py  training.py
