[project]
name = "rl-squared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "streamlit",
    "tqdm",
    "altair",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[dependency-groups]
dev = [
    "notebook>=7.5.1",
    "rise>=5.7.1",
]
